fixed dock-panel z-index

--- a/client/apps/root/root.less
+++ b/client/apps/root/root.less
@@ -827,7 +827,7 @@ img {
   top: @am-header-height;
   right: 0;
   bottom: 0;
-  z-index: 50;
+  z-index: 75;
   background-color: #fff;
   transition: transform 358ms ease;
   transform: translate(100%);
