--- a/client/components/collapseSideLayout.less
+++ b/client/components/collapseSideLayout.less
@@ -124,7 +124,7 @@
 }
 
 .ant-layout-aside .ant-layout-breadcrumb {
-  margin: 7px 0 -17px 24px;
+  margin: 0 8px 16px;
 }
 
 .ant-layout-aside .ant-layout-main {
